--- a/_config.yml
+++ b/_config.yml
@@ -5,15 +5,15 @@
 # Site
 title: Hexo
 subtitle:
-description:
+description: start from zero
 keywords:
-author: John Doe
-language:
-timezone:
+author: Ruffianjiang
+language: zh-CN
+timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://www.cnblogs.com/lossingdawn/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -73,7 +73,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: snippet
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
