--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,8 @@ timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://www.cnblogs.com/lossingdawn/
+url: https://blog.lossingdawn.top/ 
+## http://www.cnblogs.com/lossingdawn/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -73,7 +74,15 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: snippet
+theme: pure
+## snippet pure
+
+    
+baidu_url_submit:
+  count: 1 ## 提交最新的一个链接
+  host: www.hui-wang.info ## 在百度站长平台中注册的域名
+  token: your_token ## 请注意这是您的秘钥， 所以请不要把博客源代码发布在公众仓库里!
+  path: baidu_urls.txt ## 文本文档的地址， 新链接会保存在此文本文档里
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
@@ -81,3 +90,9 @@ deploy:
   type: git
   repository: https://github.com/Ruffianjiang/Ruffianjiang.github.io.git
   branch: master
+  
+#- type: s3 ## 这是我原来的deployer
+#  bucket: hui-wang.info
+#- type: baidu_url_submitter ## 这是新加的
+  
+  
